--- a/packages/suite-base/package.json
+++ b/packages/suite-base/package.json
@@ -189,5 +189,8 @@
         "vm-browserify": "1.1.2",
         "webpack": "5.98.0",
         "zustand": "4.4.1"
+    },
+    "dependencies": {
+        "react-chartjs-2": "5.3.0"
     }
 }
