--- a/package.json
+++ b/package.json
@@ -155,9 +155,12 @@
     "@lichtblick/ros2idl-parser": "1.0.0",
     "@lichtblick/suite": "workspace:*",
     "@mui/material": "5.13.5",
+    "@react-pdf/renderer": "4.3.0",
     "@tauri-apps/api": "1.6.0",
     "antd": "5.20.0",
     "lucide-react": "0.481.0",
+    "pdfjs-dist": "5.2.133",
+    "react-pdf": "9.2.1",
     "react-use": "17.5.1",
     "rehype-raw": "6.1.1",
     "umi-request": "1.4.0",
