--- a/packages/suite-desktop/tsconfig.json
+++ b/packages/suite-desktop/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@lichtblick/tsconfig/base",
   "include": ["**/*"],
   "compilerOptions": {
+    "types": ["copy-webpack-plugin"],
     "jsx": "react-jsx",
     "lib": ["dom", "dom.iterable", "es2022", "webworker"],
     "noEmit": true,
