--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@types/jest": "29.5.14",
     "@types/license-checker": "^25.0.6",
     "@types/node": "22.9.3",
+    "@types/react-pdf": "7.0.0",
     "@types/react-refresh": "^0",
     "@types/semver": "^7.5.3",
     "@typescript-eslint/eslint-plugin": "8.16.0",
