feat: android support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,9 @@
   },
   "[ignore]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
-  }
+  },
+  "[rust]": {
+    "editor.defaultFormatter": "rust-lang.rust-analyzer"
+  },
+  "java.configuration.updateBuildConfiguration": "automatic"
 }
