--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@storybook/addon-interactions": "8.6.14",
     "@storybook/react": "9.0.4",
     "@storybook/react-webpack5": "9.0.4",
+    "@tauri-apps/cli": "latest",
     "@types/babel__core": "^7.20.3",
     "@types/babel__preset-env": "^7.10.0",
     "@types/case-sensitive-paths-webpack-plugin": "2.1.9",
@@ -161,7 +162,7 @@
     "@lichtblick/ros2idl-parser": "1.0.0",
     "@lichtblick/suite": "workspace:*",
     "@mui/material": "5.13.5",
-    "@tauri-apps/api": "1.6.0",
+    "@tauri-apps/api": "2.5.0",
     "antd": "5.20.0",
     "lucide-react": "0.481.0",
     "mqtt": "5.13.1",
