--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@types/babel__preset-env": "^7.10.0",
     "@types/case-sensitive-paths-webpack-plugin": "2.1.9",
     "@types/jest": "29.5.14",
+    "@types/js-yaml": "^4",
     "@types/license-checker": "^25.0.6",
     "@types/node": "22.9.3",
     "@types/react-refresh": "^0",
@@ -164,6 +165,7 @@
     "@mui/material": "5.13.5",
     "@tauri-apps/api": "2.5.0",
     "antd": "5.20.0",
+    "js-yaml": "4.1.0",
     "lucide-react": "0.481.0",
     "mqtt": "5.13.1",
     "react-use": "17.5.1",
