--- a/.github/workflows/pre-build.yml
+++ b/.github/workflows/pre-build.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4.1.1
         with:
-          token: ${{ secrets.LICHTBLICK_GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4.0.3
