--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -6,7 +6,8 @@ on:
       - main # Trigger on push to main branch
 
 permissions:
-  actions: write
+  contents: write # 必需：允许 git push
+  actions: write # 保留：允许触发其他 workflow
 
 jobs:
   bump:
