--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ env:
   NEW_VERSION: ""
 
 jobs:
+  # 第一步：提升版本号并提交更改
   version:
     name: Bump version
     runs-on: macos-latest
@@ -21,16 +22,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4.1.1
         with:
-          # 需要拉取所有历史记录来分析提交信息
-          fetch-depth: 0
-
-      # 新增步骤：根据提交信息计算下一个版本和升级类型
-      - name: Get next version
-        id: next_version
-        uses: tj-actions/next-version@v41 # 使用 action 来分析
-        with:
-          # 可选：如果你使用 main 作为默认分支，这行可以不写
-          default_branch: "main"
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4.0.3
@@ -46,30 +38,18 @@ jobs:
       - name: Bump version and set output
         id: version_bump
         run: |
-          # 使用上一步计算出的升级类型 (patch, minor, major)
-          BUMP_TYPE=${{ steps.next_version.outputs.bump }}
-
-          echo "Calculated bump type: $BUMP_TYPE"
-
-          # 如果没有新的 fix 或 feat，BUMP_TYPE 可能为空，默认为 patch
-          if [ -z "$BUMP_TYPE" ]; then
-            echo "No version bump detected, defaulting to patch."
-            BUMP_TYPE="patch"
-          fi
-
-          yarn version $BUMP_TYPE
-          yarn workspace @lichtblick/suite version $BUMP_TYPE
+          yarn version minor
+          yarn workspace @lichtblick/suite version minor
 
           NEW_VERSION_VALUE=$(node -p "require('./package.json').version")
           echo "new_version=${NEW_VERSION_VALUE}" >> $GITHUB_ENV
           echo "new_version=${NEW_VERSION_VALUE}" >> $GITHUB_OUTPUT
 
-      # 后续步骤（Commit and push 等）保持不变...
       - name: Commit and push version bump
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
+          git add package.json packages/suite/package.json yarn.lock
           git commit -m "chore: Bump version to v${{ env.new_version }} [skip ci]"
           git tag "v${{ env.new_version }}"
           git push origin main --tags
