Revert "chore: action"
This reverts commit d1cadaca7c86ca6ed37154a56594979c08b4f6d2.

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -6,8 +6,7 @@ on:
       - main # Trigger on push to main branch
 
 permissions:
-  contents: write # 必需：允许 git push
-  actions: write # 保留：允许触发其他 workflow
+  actions: write
 
 jobs:
   bump:
