--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,6 @@ jobs:
       - name: Set up Android SDK & NDK
         if: matrix.os == 'ubuntu-latest'
         run: |
-          # 设置ANDROID_HOME变量，方便后续使用
           ANDROID_HOME=$HOME/android-sdk
           echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
 
@@ -95,25 +94,20 @@ jobs:
           unzip commandlinetools-linux-11076708_latest.zip
           rm commandlinetools-linux-11076708_latest.zip
 
-          # --- 核心修正部分 ---
-          # 1. 创建目标目录
           mkdir -p $ANDROID_HOME/cmdline-tools/latest
-
-          # 2. 移动解压后的 *内容* (使用 /* 通配符) 到目标目录
           mv cmdline-tools/* $ANDROID_HOME/cmdline-tools/latest/
-
-          # 3. 删除空的源目录，保持整洁
           rmdir cmdline-tools
-          # --- 修正结束 ---
 
           # 现在路径是正确的，可以安全地添加到 GITHUB_PATH
           echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
-          echo "$ANDROID_HOME/platform-tools" >> $GITHUB_PATH
+
 
           # 接受许可证并安装必要的包
-          yes | sdkmanager --licenses > /dev/null
-          sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
-          sdkmanager "ndk;26.1.10909125"
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "ndk;26.1.10909125"
+
+          echo "$ANDROID_HOME/platform-tools" >> $GITHUB_PATH
 
           # 设置 NDK 环境变量
           echo "ANDROID_NDK_ROOT=$ANDROID_HOME/ndk/26.1.10909125" >> $GITHUB_ENV
