--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "autoblick",
-  "version": "1.17.0",
+  "version": "1.0.0",
+  "upstream": "lichtblick",
+  "upstreamVersion": "1.16.0",
   "license": "MPL-2.0",
   "private": true,
   "productName": "Autoblick",
