--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,6 +111,7 @@ jobs:
 
           # 设置 NDK 环境变量
           echo "ANDROID_NDK_ROOT=$ANDROID_HOME/ndk/26.1.10909125" >> $GITHUB_ENV
+          echo "NDK_HOME=$ANDROID_HOME/ndk/26.1.10909125" >> $GITHUB_ENV
 
       - name: Enable corepack
         run: corepack enable yarn
@@ -125,6 +126,13 @@ jobs:
       - name: Build macOS version
         if: matrix.os == 'macos-latest'
         run: yarn run package:darwin
+
+      - name: Install Rust toolchain for Android
+        if: matrix.os == 'ubuntu-latest'
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
+          targets: aarch64-linux-android,armv7-linux-androideabi,i686-linux-android,x86_64-linux-android
 
       # --- Linux Build ---
       - name: Build linux version
