chore: fix Android home env

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,6 +89,8 @@ jobs:
           ANDROID_HOME=$HOME/android-sdk
           echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
 
+          unset ANDROID_SDK_ROOT || true
+
           # 下载并解压
           wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
           unzip commandlinetools-linux-11076708_latest.zip
@@ -150,7 +152,9 @@ jobs:
       # --- Android Build (在已配置好环境的 Linux 上构建) ---
       - name: Build Android version
         if: matrix.os == 'ubuntu-latest'
-        run: yarn run package:android
+        run: |
+          yarn run package:android
+          cp src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk dist/
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -158,7 +162,6 @@ jobs:
           name: build-artifacts-${{ matrix.os }}
           path: |
             dist/
-            src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk
 
   # 第三步：创建 Release
   release:
