--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@storybook/addon-interactions": "8.6.14",
     "@storybook/react": "9.0.14",
     "@storybook/react-webpack5": "9.0.14",
+    "@tauri-apps/cli": "2.6.2",
     "@types/babel__core": "^7.20.3",
     "@types/babel__preset-env": "^7.10.0",
     "@types/case-sensitive-paths-webpack-plugin": "2.1.9",
